Fixed layout bug occurring in smaller screen size

--- a/src/stylesheets/body.scss
+++ b/src/stylesheets/body.scss
@@ -4,7 +4,7 @@
 body {
   -webkit-font-smoothing: antialiased;
   color: $gray-dark;
-  font-family: 'Droid Serif', serif;
+  font-family: "ff-tisa-web-pro",serif;
 }
 
 // Element tags are listed first, then classes
