--- a/src/stylesheets/typography.scss
+++ b/src/stylesheets/typography.scss
@@ -24,6 +24,16 @@ blockquote {
   }
 }
 
+h2 {
+  font-size: 36px;
+  line-height: 38px;
+}
+
+h3 {
+  font-size: 28px;
+  line-height: 54px;
+}
+
 ol {
   padding: 0px;
   margin: 0 0 25px 25px;
